[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Bomb.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=2]
radius = 10.1361

[sub_resource type="CircleShape2D" id=1]
radius = 131.029

[node name="Bomb" type="RigidBody2D"]
script = ExtResource( 2 )

[node name="ExplosionCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="ExplosionArea" type="Area2D" parent="."]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource( 1 )

[node name="ExplosionSprite" type="Sprite" parent="."]

[node name="BombSprite" type="Sprite" parent="."]
modulate = Color( 1, 0.847059, 0.156863, 1 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true
[connection signal="body_entered" from="." to="." method="_on_Bomb_body_entered"]
[connection signal="body_entered" from="ExplosionArea" to="." method="_on_ExplosionArea_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
